# openai-build-week

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2f4c7b9a1d03_add_user_auth_and_lecture_ownership.py  7ad9d3f61b42_add_lecture_media_hash.py  8c963e1561d4_initial_lecture_workflow.py
apps/api/app/: main.py
apps/api/app/api/: auth_routes.py  dependencies.py  routes.py
apps/api/app/core/: auth.py  config.py  errors.py  logging.py  passwords.py  signing.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  lecture.py  user.py
apps/api/app/providers/: interfaces.py  mock.py  openai.py
apps/api/app/repositories/: lectures.py  users.py
apps/api/app/schemas/: auth.py  lecture.py  media.py
apps/api/app/services/: auth.py  lectures.py  media.py  processing.py  profile.py  uploads.py
apps/api/app/workers/: celery_app.py  dispatcher.py  tasks.py
apps/api/tests/: test_auth_service.py  test_dispatcher.py  test_lecture_service.py  test_logging.py  test_media_service.py  test_openai_providers.py  test_processing_service.py  test_profile_service.py  test_repositories.py  test_routes.py  test_upload_service.py
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: SiteHeader.tsx
apps/web/e2e/: adaptive-flow.spec.ts  large-upload.manual.spec.ts
apps/web/lib/: api.ts  types.ts
(+26 files in other folders)
