[project]
name = "studyflow-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "celery[redis]>=5.5,<6",
  "fastapi>=0.115,<1",
  "openai>=2,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
